nesc-frontend/src/test/resources/integration/programs/bad/bad25/M2.nc
module M2
{
   provides command void* c();
}
implementation
{
   command void* c()
   {
      return 0;
   }
}
